<resources>
    <string name="app_name">Tasbeeh</string>
    <string name="tasbeeh_counter">Tasbeeh Counter</string>
    <string name="tasbeeh_ncounter">Tasbeeh \nCounter</string>
    <string name="go_to">Go to</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="dhikr">Dhikrs</string>
    <string name="tasbeeh_n_counter">Tasbeeh \n Counter</string>
    <string name="_0">0</string>
    <string name="zikir2">سبحان الله</string>
    <string name="zikir3">لا إله إلا الله محمد رسول الله</string>
    <string name="zikir4">لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللَّهِ</string>
</resources>