<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccffcc"
    tools:context=".StartingActivity">

    <ImageView
        android:id="@+id/image_tasbeeh"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/bg_for_image"
        android:elevation="@dimen/_25sdp"
        android:src="@drawable/tasbeeh_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_tasbeeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/font"
        android:text="@string/tasbeeh_counter"
        android:textColor="#085A0C"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_tasbeeh" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_35sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@id/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tasbeeh">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_for_card1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/tasbeeh_n_counter"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal" />



            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/tasbeeh_with_hand_image" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_for_card2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/dhikr"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/image_book" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="@dimen/_25sdp"
        app:layout_constraintEnd_toStartOf="@id/card4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_for_crad4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/rate_image" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card3"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_for_card3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/image_share" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>